--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.painter_lock filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.unity filter=lfs diff=lfs merge=lfs -text
+*.obj filter=lfs diff=lfs merge=lfs -text
