--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 
 # Never ignore Asset meta data
 ![Aa]ssets/**/*.meta
+!*.obj
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
